overflow-fix

--- a/Super Numbers Generator/src/scss/elements/_unloggedGenerator.scss
+++ b/Super Numbers Generator/src/scss/elements/_unloggedGenerator.scss
@@ -7,6 +7,7 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   padding: 1rem 1rem;
+  overflow: auto;
 
   h2, h3 {
     text-align: center;
